# SilkDecoder

./: .gitignore  README.md  build.gradle  config.gradle  maven.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/xyz/xxin/silkdecodertest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/xyz/xxin/silkdecodertest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/xyz/xxin/silkdecodertest/: ExampleUnitTest.java
decoder/: build.gradle
decoder/src/main/cpp/: CMakeLists.txt  decoder.cpp  decoder.h
decoder/src/main/cpp/head/: PUBLIC.h
decoder/src/main/cpp/include/: lame.h
decoder/src/main/cpp/libmp3lame/: VbrTag.c  fft.c  machine.h  presets.c
decoder/src/main/cpp/src/: SKP_Silk_NSQ.c  SKP_Silk_NSQ_del_dec.c  SKP_Silk_SigProc_FIX.h  SKP_Silk_ana_filt_bank_1.c
decoder/src/main/cpp/util/: CodeUtil.cpp  CodeUtil.h  ConvertUtil.cpp  ConvertUtil.h
decoder/src/main/java/xyz/xxin/silkdecoder/: DecodeNative.java  SilkDecoder.java
gradle/wrapper/: gradle-wrapper.properties
